--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,3 +5,4 @@ $color-bkg-dark: #050723;
 // $color-bkg-light: #151737;
 // $color-bkg-light: rgb(29, 1, 29);
 $color-bkg-light: #070b33;
+$media-min-width: 1000px;
