--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -37,6 +37,7 @@
                 <a
                     class="button"
                     href="/tags/"
+                    title="List all the categories"
                 >
                     More&#8230;
                 </a>
