--- a/assets/scss/_large.scss
+++ b/assets/scss/_large.scss
@@ -1,4 +1,6 @@
-@media screen and (min-width: 800px) {
+@import 'variables';
+
+@media screen and (min-width: $media-min-width) {
   header.site {
     height: 100vh;
     margin: 0 5rem;
@@ -10,7 +12,6 @@
     h3 {
       font-size: 2rem;
       line-height: 2.3rem;
-      padding-top: 2rem;
     }
   }
 
@@ -52,12 +53,6 @@
     > ul {
       display: initial;
     }
-  }
-
-  .page_not_found {
-    border-radius: 2rem;
-    width: 100%;
-    height: 470px;
   }
 
   article ul.tag_list {
