--- a/assets/scss/_section.scss
+++ b/assets/scss/_section.scss
@@ -24,6 +24,10 @@ section {
   > header {
     padding-top: 1.5rem;
     text-align: center;
+
+    h2 {
+      font-size: 2rem;
+    }
   }
 
   > footer {
