--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,6 +5,15 @@
 
 {{ end -}}
 
-{{- define "header" -}}
+{{- define "main" -}}
+<div style="position: relative;">
+
+    <img
+        src="/img/background-404.jpg"
+        alt="A man looking at an extra-large ologram representing a woman pointing the index finger to him"
+    />
+
     <h1 class="page_not_found">Page not found</h1>
+
+</div>
 {{- end -}}
