--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,6 +12,7 @@
 {{ end -}}
 
 {{- define "header" -}}
+<header class="site">
 
     <div class="hero">
 
@@ -41,6 +42,7 @@
         </a>
     </aside>
 
+</header>
 {{- end -}}
 
 {{- define "main" -}}
