--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -108,6 +108,17 @@ footer.site {
     padding: 1rem;
     width: 100%;
   }
+
+  div.links {
+    margin: auto 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
+    ul {
+      padding-left: 4rem;
+    }
+  }
 }
 
 footer.site a {
