--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -97,13 +97,6 @@ footer.site {
   padding: 1.5rem 0.5rem 1rem;
   background: linear-gradient(to top, $color-bkg-dark, $color-bkg-light);
 
-  ul {
-    text-align: left;
-    width: 12rem;
-    max-width: 12rem;
-    margin-bottom: 2rem;
-  }
-
   div.links {
     margin: auto 1rem;
     width: 100%;
@@ -112,6 +105,18 @@ footer.site {
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+
+    ul {
+      text-align: left;
+      width: 12rem;
+      max-width: 12rem;
+      margin-bottom: 2rem;
+
+      li {
+        padding-top: 0.5rem;
+        font-size: 1.2rem;
+      }
+    }
   }
 
   small {
