--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -194,3 +194,14 @@ footer.site {
 .license {
   margin: auto 0.2rem;
 }
+
+.blog-title {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  margin: 1rem auto;
+  border-bottom: 2px solid;
+  padding-bottom: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
