--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -201,6 +201,7 @@ footer.site {
   text-align: center;
   margin: 1rem auto;
   border-bottom: 2px solid;
+  border-color: $color-main;
   padding-bottom: 2rem;
   font-size: 1.5rem;
   font-weight: bold;
