--- a/assets/scss/_tag_list.scss
+++ b/assets/scss/_tag_list.scss
@@ -3,6 +3,7 @@ h4.tag_list {
   text-transform: uppercase;
   padding-bottom: 1rem;
   font-size: 2rem;
+  text-align: center;
 }
 
 ul.tag_list li a {
