--- a/assets/scss/_section.scss
+++ b/assets/scss/_section.scss
@@ -14,6 +14,7 @@ a:hover.button {
 
 section.list {
   padding-top: 1rem;
+  margin-bottom: 2rem;
 }
 
 section {
@@ -29,37 +30,18 @@ section {
       font-size: 2rem;
     }
   }
-
-  > footer {
-    margin: 1rem;
-
-    > ul {
-      padding-bottom: 3rem;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-
-      li {
-        font-size: 1.2rem;
-        padding-right: 0.5rem;
-      }
-    }
-  }
-}
-
-.paginator > ul > li + li {
-  padding-left: 3rem;
 }
 
 section + section {
   margin-top: 3rem;
 }
 
-.paginator {
-  padding: 2rem 0;
-}
+@media screen and (min-width: $media-min-width) {
+  section > header {
+    padding: initial;
+  }
 
-.paginator > ul {
-  justify-content: center;
-  font-size: 1.5rem;
+  section + section {
+    margin-top: unset;
+  }
 }
