--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -45,7 +45,7 @@
         </ul>
         {{- end -}}
 
-        <ul>
+        <ul class="buttons">
             <li>
                 <a
                     href="{{ or $section.Params.src_url $section.RelPermalink }}"
