--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -2,7 +2,7 @@
 @import 'section';
 @import 'article';
 @import 'tag_list';
-@import 'keyframes', 'large';
+@import 'keyframes';
 
 div.social ul > li {
   margin: 0 10px 15px;
