--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'article';
-@import 'keyframes', 'large';
 @import 'tag_list';
+@import 'keyframes';
 
 body {
   max-width: 54rem;
@@ -10,7 +10,7 @@ body {
 article {
   border: unset;
   border-image: unset;
-  color: white;
+  color: $color-text;
   font-size: 1.2rem;
 
   h1,
