--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -109,7 +109,7 @@
             <div class="link_list">
                 <h5>Jamstack</h5>
                 <ul>
-                    {{- range .Site.Menus.tech -}}
+                    {{- range .Site.Menus.jamstack -}}
                     <li><a href="{{ .URL }}">{{ .Name }}</a></li>
                     {{- end -}}
                 </ul>
