--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,33 +1,44 @@
 {{- define "head" -}}
-{{ $blogMainPage := .Site.GetPage "/blog" }}
+{{- $blogMainPage := .Site.GetPage "/blog" -}}
 {{- $title := printf "%s's %s" (.Param "author") $blogMainPage.Title -}}
 
     <title>{{ $title }}</title>
 
-    {{- partial "scss" "list" -}}
-
     {{- with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $title | safeHTML }}
-    {{ end -}}
+    {{- end -}}
 
-{{ end -}}
+{{- end -}}
 
-{{ define "main" }}
-{{ $blogMainPage := .Site.GetPage "/blog" }}
+{{- define "header" -}}
+{{-  $blogMainPage := .Site.GetPage "/blog" -}}
+{{- $blogTitle := printf "%s's %s" (.Param "author") $blogMainPage.Title -}}
+
+<header>
+    <h1 class="blog-title">
+        <a
+            href="{{ $blogMainPage.RelPermalink }}"
+            title="Go to {{ $blogMainPage.Title }} main page"
+        >
+            {{- $blogTitle -}}
+        </a>
+    </h1>
+</header>
+{{ end }}
+
+{{- define "main" -}}
+{{- $blogMainPage := .Site.GetPage "/blog" -}}
 {{- $title := printf "%s's %s" (.Param "author") $blogMainPage.Title -}}
-{{ $section := . }}
+{{- $section := . -}}
 
-<section class="list">
-    TERMS
-</section>
+<h1>Categories</h1>
 
-<aside>
-    <h4 class="tag_list">Categories</h4>
-
+<section>
     <ul class="tag_list">
         {{ range .Site.Taxonomies.tags.ByCount }}
         {{ partial "tag" .Term }}
         {{ end }}
     </ul>
-</aside>
+</section>
+
 {{- end -}}
