--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -12,15 +12,17 @@
     </header>
     {{- end -}}
 
-    {{- if isset $article.Params "description" -}}
-    {{ $article.Params.description -}}
-    {{- else if isset $section.Params "truncate" -}}
-    {{ $article.Content | truncate $section.Params.truncate -}}
-    {{- else if (eq $section.Kind "term") -}}
-    {{ $article.Content | truncate 400 -}}
-    {{- else -}}
-    {{ $article.Content -}}
-    {{- end -}}
+    <div class="content">
+        {{- if isset $article.Params "description" -}}
+        {{ $article.Params.description -}}
+        {{- else if isset $section.Params "truncate" -}}
+        {{ $article.Content | truncate $section.Params.truncate -}}
+        {{- else if (eq $section.Kind "term") -}}
+        {{ $article.Content | truncate 400 -}}
+        {{- else -}}
+        {{ $article.Content -}}
+        {{- end -}}
+    </div>
 
     <footer>
 
