--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{- define "head" -}}
 
-    {{- $title := printf "%s's %s" (.Param "author") .Page.Title -}}
+    {{- $title := .Param "title" -}}
     <title>{{ $title }}</title>
 
     {{- partial "scss" "list" -}}
@@ -12,7 +12,7 @@
 {{ end -}}
 
 {{ define "main" }}
-{{- $title := printf "%s's %s" (.Param "author") .Page.Title -}}
+{{- $title := .Param "title" -}}
 
 <section class="list">
     <h1 class="blog-title">
