--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,7 @@
 
     <title>{{ $blogTitle }} - {{ .Title }}</title>
 
+    <link rel="preconnect" href="https://x.disq.us">
 {{- end -}}
 
 {{- define "header" -}}
