--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -48,7 +48,7 @@
         {{- end -}}
     </footer>
 
-    {{ template "_internal/disqus.html" . }}
+    {{ partial "comments-form" . }}
 
 </article>
 {{ end }}
