--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -1,8 +1,27 @@
+{{ $comments := readDir "data/comments" }}
+{{ $comments2 := .Site.Data.comments }}
+{{ $.Scratch.Add "hasComments" 0 }}
+{{ $entryId := .File.UniqueID }}
+
+{{ range where $comments "Name" $entryId }}
+    {{ .Name }}
+
+    <ol>
+    {{ range $comm := (index $comments2 .Name ) }}
+        <li>
+            {{ $comm.body }} - {{ $comm.date }} - {{ $comm.name }}
+        </li>
+    {{ end }}
+    </ol>
+
+{{ end }}
+
+{{ $id := .RelPermalink | strings.TrimRight "/" | strings.TrimLeft "/" }}
 <form method="POST" action="{{ .Param "staticmanUrl" }}">
     <input type="hidden" name="options[redirect]" value="{{ .Permalink }}#comment-submitted">
-    <input type="hidden" name="options[entryId]" value="{{ .File.UniqueID }}">
+    <input type="hidden" name="options[entryId]" value="{{ $id }}">
     <input name="fields[name]" type="text" placeholder="Your name">
     <input name="fields[email]" type="email" placeholder="Your email address (optional)">
-    <textarea name="fields[body]" placeholder="Your message. Feel free to use Markdown." rows="10"></textarea>
+    <textarea name="fields[body]" placeholder="Your comment. Feel free to use Markdown." rows="10"></textarea>
     <input type="submit" value="Submit">
 </form>
