--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -48,7 +48,9 @@
         {{- end -}}
     </footer>
 
-    {{ partial "comments-form" . }}
+    <div class="comments">
+        {{ partial "comments-form" . }}
+    </div>
 
 </article>
 {{ end }}
