--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -1,25 +1,27 @@
-{{ $commentsFiles := readDir "data/comments/blog" }}
-{{ $comments := .Site.Data.comments.blog }}
+{{- $commentsFiles := readDir (printf "data/comments/%s" .Section) -}}
+{{- $comments := (index .Site.Data.comments .Section) -}}
+{{- range where $commentsFiles "Name" .File.BaseFileName -}}
+{{- $length := len (index $comments .Name) -}}
 
-{{ range where $commentsFiles "Name" .File.BaseFileName }}
-    <h4>Comments {{ .Name }}</h4>
+<h4>{{ $length }} comment{{ if gt $length 1 }}s{{ end }}</h4>
 
     <ol>
-    {{ range $comm := (index $comments .Name ) }}
+    {{- range $comm := (index $comments .Name ) -}}
         <li>
-            {{ $comm.body }} - {{ $comm.date }} - {{ $comm.name }}
+            {{ $comm.name | htmlEscape }}: {{ $comm.body | markdownify }} ({{ partial "date" $comm.date }})
         </li>
-    {{ end }}
+    {{- end -}}
     </ol>
 
-{{ end }}
+{{- end -}}
 
-{{ $id := .RelPermalink | strings.TrimRight "/" | strings.TrimLeft "/" }}
+
+{{- $id := .RelPermalink | strings.TrimRight "/" | strings.TrimLeft "/" -}}
+<h4>Leave a comment</h4>
 <form method="POST" action="{{ .Param "staticmanUrl" }}">
     <input type="hidden" name="options[redirect]" value="{{ .Permalink }}#comment-submitted">
     <input type="hidden" name="options[entryId]" value="{{ $id }}">
     <input name="fields[name]" type="text" placeholder="Your name">
-    <input name="fields[email]" type="email" placeholder="Your email address (optional)">
     <textarea name="fields[body]" placeholder="Your comment. Feel free to use Markdown." rows="10"></textarea>
     <input type="submit" value="Submit">
 </form>
