--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -30,6 +30,38 @@ article {
     margin: 1rem 0 0;
     line-height: 2.5rem;
   }
+
+  div.comments {
+    padding: 1rem;
+    border-radius: 1rem;
+
+    h4 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    h5 {
+      margin-top: initial;
+    }
+
+    ol {
+      list-style-type: none;
+      margin-bottom: 8rem;
+      padding: 0;
+
+      li {
+        border-radius: 1rem;
+        background-color: $color-bkg-light;
+        padding: 2rem;
+        margin-top: 3rem;
+      }
+    }
+
+    .date {
+      color: $color-secondary;
+    }
+  }
 }
 
 header {
