--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -6,7 +6,11 @@
     <ol>
     {{ range . }}
         <li>
-            {{ .name | htmlEscape }}: {{ .body | markdownify }} ({{ partial "date" .date }})
+            <h5>{{ .name | htmlEscape }}</h5>
+
+            <small class="date">{{ partial "date" .date }}</small>
+
+            <p>{{ .body | markdownify }}</p>
         </li>
     {{- end -}}
     </ol>
@@ -14,9 +18,10 @@
 
 <h4>Leave a comment</h4>
 <form method="POST" action="{{ .Param "staticmanUrl" }}">
+    <textarea name="fields[body]" placeholder="New Comment! Feel free to use Markdown." rows="10"></textarea>
     <input type="hidden" name="options[redirect]" value="{{ .Permalink }}#comment-submitted">
     <input type="hidden" name="options[entryId]" value="{{ $id }}">
     <input name="fields[name]" type="text" placeholder="Your name">
-    <textarea name="fields[body]" placeholder="Your comment. Feel free to use Markdown." rows="10"></textarea>
+    <input name="fields[email]" type="email" placeholder="Your email">
     <input type="submit" value="Submit">
 </form>
