--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -18,10 +18,12 @@
 
 <h4>Leave a comment</h4>
 <form method="POST" action="{{ .Param "staticmanUrl" }}">
-    <textarea name="fields[body]" placeholder="New Comment! Feel free to use Markdown." rows="10"></textarea>
+    <textarea name="fields[body]" placeholder="New Comment! Feel free to use Markdown." rows="10" required></textarea>
     <input type="hidden" name="options[redirect]" value="{{ .Permalink }}#comment-submitted">
     <input type="hidden" name="options[entryId]" value="{{ $id }}">
-    <input name="fields[name]" type="text" placeholder="Your name">
-    <input name="fields[email]" type="email" placeholder="Your email">
-    <input type="submit" value="Submit">
+    <div class="input">
+        <input name="fields[name]" type="text" placeholder="Your name" required>
+        <input name="fields[email]" type="email" placeholder="Your email (optional)">
+        <input type="submit" value="Post Comment">
+    </div>
 </form>
