--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -31,6 +31,11 @@ article {
     line-height: 2.5rem;
   }
 
+  div.content img {
+    width: 100%;
+    height: auto;
+  }
+
   div.comments {
     border-radius: 1rem;
 
