--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -1,7 +1,7 @@
-{{- $id := printf "%s/%s" .Section .File.BaseFileName -}}
+{{- $id := printf "%s/%s" .Section .File.ContentBaseName -}}
 {{- $sectionData := (index .Site.Data.comments .Section) -}}
 
-{{ with (index $sectionData .File.BaseFileName) }}
+{{ with (index $sectionData .File.ContentBaseName) }}
 <h4>{{ len . }} comment{{ if gt (len .) 1 }}s{{ end }}</h4>
     <ol>
     {{ range . }}
