--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -3,6 +3,7 @@
 @import 'tag_list';
 @import 'keyframes';
 @import 'blog_title';
+@import 'comments';
 
 body {
   max-width: 54rem;
@@ -36,56 +37,6 @@ article {
     width: 100%;
     height: auto;
   }
-
-  div.comments {
-    border-radius: 1rem;
-
-    h4 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-
-    h5 {
-      margin-top: initial;
-    }
-
-    ol {
-      list-style-type: none;
-      margin-bottom: 8rem;
-      padding: 0;
-
-      li {
-        border-radius: 1rem;
-        background-color: $color-bkg-light;
-        padding: 2rem;
-        margin-top: 3rem;
-      }
-    }
-
-    form * {
-      border: none;
-      padding: 0.5rem;
-      border-radius: 0.5rem;
-    }
-
-    textarea {
-      width: 98%;
-      margin-bottom: 1rem;
-    }
-
-    div.input {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      padding: initial;
-
-      input {
-        width: 100%;
-        margin-top: 1rem;
-      }
-    }
-  }
 }
 
 header {
@@ -93,7 +44,7 @@ header {
 }
 
 @media screen and (min-width: $media-min-width) {
-  article div.comments div.input input:nth-child(-n+3) {
+  div.comments div.input input:nth-child(-n+3) {
     width: 30%;
   }
 }
