--- a/layouts/partials/comments-form.html
+++ b/layouts/partials/comments-form.html
@@ -7,6 +7,13 @@
     {{ range . }}
     {{- $commentId := printf "comment-%s" ._id }}
         <li id="{{ $commentId }}">
+            {{ with .email }}
+            <img
+                src="https://www.gravatar.com/avatar/{{ . | md5 }}"
+                alt="Gravatar image for {{ . }}"
+                style="float: left; padding-right: 1rem;"
+            >
+            {{- end -}}
             <h5>{{ .name | htmlEscape }}</h5>
 
             <small class="date">
